# attp-sdk

./: README.md  ascender.json  attp.json  attp.jsonc  attp.peer1.jsonc  attp.peer2.jsonc  pyproject.toml
scripts/: run-peers.sh  test-attp.sh
src/: bootstrap.py  settings.py  strategy.py
src/attp/: __init__.py  providers.py
src/attp/client/: __init__.py  authenticator.py  configs.py  service_discovery.py  session_driver.py
src/attp/decorators/: __init__.py  attp_call.py  attp_event.py  attp_handler.py  attp_lifecycle.py
src/attp/loadbalancer/: __init__.py  balancer.py  configs.py  evaluator.py
src/attp/loadbalancer/abc/: cacher.py  candidate.py  strategy.py
src/attp/loadbalancer/caches/: memory_cache.py
src/attp/loadbalancer/strategies/: round_robin.py
src/attp/server/: __init__.py  attp_server.py  auth_hmac.py  configs.py  session_driver.py
src/attp/server/abc/: auth_strategy.py
src/attp/server/namespaces/: dispatcher.py
src/attp/shared/: lifecycle_service.py  limits.py  multireceiver.py  secrets.py  transmitter.py
src/attp/shared/namespaces/: dispatcher.py  router.py
src/attp/shared/objects/: dispatcher.py  eventbus.py  stream.py
src/attp/shared/sessions/: additional_mixins.py  driver.py
src/attp/shared/utils/: ack_gate.py  callbacks.py  executor.py  qsequence.py
src/attp/types/: context.py  frame.py  routes.py  streaming_signature.py
src/attp/types/exceptions/: attp_exception.py  load_balancer.py  protocol_error.py
src/attp/types/frames/: accepted.py  auth.py  error.py  ready.py  (+1 more)
src/controllers/: main_controller.py
